vars/Ubuntu: set gem list versions according to underlying ruby constraint, add python3-mysqldb/18.04

--- a/tasks/misp-gem.yml
+++ b/tasks/misp-gem.yml
@@ -2,7 +2,8 @@
 
 - name: Install gem dependencies
   gem:
-    name: "{{ item }}"
+    name: "{{ item.name }}"
+    version: "{{ item.v | default(omit) }}"
     pre_release: yes
     state: present
     user_install: no
