--- a/vars/Ubuntu-18.04.yml
+++ b/vars/Ubuntu-18.04.yml
@@ -40,6 +40,7 @@ misp_pkg_list:
  # misp-modules
  - python3
  - python3-pip
+ - python3-mysqldb
  - libpq5
  - acl
  - sudo
@@ -59,7 +60,8 @@ misp_pkg_list:
  - libxrender1
 
 misp_gem_list:
- - asciidoctor-pdf
+ - { name: public_suffix, v: 4.0.7 }
+ - { name: asciidoctor-pdf, v: 2.3.2 }
 
 python3_bin: python3
 python3_pip: pip3
