--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -62,7 +62,7 @@ misp_pkg_list:
  - libxrender1
 
 misp_gem_list:
- - asciidoctor-pdf
+ - { name: asciidoctor-pdf, v: 2.3.2 }
 
 python3_bin: python3
 python3_pip: pip3
