--- a/tasks/selinux-context.yml
+++ b/tasks/selinux-context.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: RedHat | Ensure selinux context for MISP httpd directories
-  ansible.builtin.command: "chcon -R -t httpd_sys_rw_content_t {{ item }}"  # noqa 301
+  ansible.builtin.command: "chcon -R -t httpd_sys_rw_content_t {{ item }}"  # noqa no-changed-when
   # sefcontext:
   #   target: "{{ item }}(/.*)?"
   #   setype: httpd_sys_rw_content_t
