misp-add-users: deprecated 'cake password' but 'user change_pw' not creating user

--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -7,9 +7,12 @@
   register: ap
 - name: Set admin password
   ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake Password \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
+  # ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake user change_pw \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
   become: yes
   become_user: "{{ www_user }}"
   when: not ap.stat.exists
+  register: cakep
+  failed_when: "'User not found.' in cakep.stdout or 'Error:' in cakep.stderr"
 - name: Admin pass set marker
   ansible.builtin.file:
     dest: "{{ misp_rootdir }}/.admin_pass_set"
