--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -3,19 +3,21 @@
 misp_pkg_list:
  - openssh-server
  - mysql-server
- - php
- - php-curl
- - php-mysql
- - php-mbstring
- - php8.1-opcache
- - php-readline
- - php-mbstring
- - php-zip
- - php-redis
- - php-gnupg
- - php-intl
- - php-bcmath
- - php-gd
+ # MISP only supports PHP 7 on oct 2022
+ - php7.4
+ - php7.4-dev
+ - php7.4-curl
+ - php7.4-mysql
+ - php7.4-mbstring
+ - php7.4-opcache
+ - php7.4-readline
+ - php7.4-mbstring
+ - php7.4-zip
+ - php7.4-redis
+ - php7.4-gnupg
+ - php7.4-intl
+ - php7.4-bcmath
+ - php7.4-gd
  - postfix
  - gcc
  - zip
@@ -31,11 +33,9 @@ misp_pkg_list:
  - libgl1-mesa-glx
  - libzbar0
  - zlib1g-dev
- - php-dev
  - curl
  - gnupg
  #
- - php-redis
  - python3-mysqldb
  - rng-tools5
  # misp-modules
@@ -80,7 +80,7 @@ misp_services_nginx:
  - "{{ apache_svc }}"
  - "{{ mysql_svc }}"
  - "{{ rng_svc }}"
- - php8.1-fpm
+ - php7.4-fpm
 
 misp_testing_pkg:
  - ruby
@@ -88,7 +88,7 @@ misp_testing_pkg:
 
 misp_webserver_apache2:
  - apache2
- - libapache2-mod-php
+ - libapache2-mod-php7.4
  ## travis: "No package matching 'libapache2-mod-fastcgi' is available"
  # - libapache2-mod-fastcgi
 
@@ -96,12 +96,12 @@ misp_webserver_nginx:
  - nginx
  - php-fpm
 
-php_confdir: /etc/php/8.1/mods-available
+php_confdir: /etc/php/7.4/mods-available
 php_confext: ini
-php_ini: /etc/php/8.1/apache2/php.ini
-php_ini_nginx: /etc/php/8.1/fpm/php.ini
-php_confenable: /etc/php/8.1/apache2/conf.d
-nginx_sock: /run/php/php8.1-fpm.sock
+php_ini: /etc/php/7.4/apache2/php.ini
+php_ini_nginx: /etc/php/7.4/fpm/php.ini
+php_confenable: /etc/php/7.4/apache2/conf.d
+nginx_sock: /run/php/php7.4-fpm.sock
 fpm_user: www-data
 
 gnupg_privdir: "{{ misp_rootdir }}/.gnupg/private-keys-v1.d"
