--- a/tasks/composer.yml
+++ b/tasks/composer.yml
@@ -37,7 +37,7 @@
     creates: /usr/local/bin/composer
 
 - name: Allow-plugins composer/installers as required
-  composer:
+  community.general.composer:
     command: config
     arguments: allow-plugins.composer/installers true
     working_dir: "{{ misp_rootdir }}/app"
@@ -47,7 +47,7 @@
   become_user: "{{ www_user }}"
 
 - name: Install PHP dependencies via composer (kamisama/cake-resque, Vendor)
-  composer:
+  community.general.composer:
     command: install
     working_dir: "{{ misp_rootdir }}/app"
   register: pkg_result
