--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -1,6 +1,7 @@
 ---
 
-- import_tasks: debian-php74.yml
+- name: Import debian-php74
+  ansible.builtin.import_tasks: debian-php74.yml
   when: ansible_distribution_release == 'jammy'
 
 - name: Debian | MISP dependencies install
