--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -101,7 +101,7 @@ php_confext: ini
 php_ini: /etc/php/7.4/apache2/php.ini
 php_ini_nginx: /etc/php/7.4/fpm/php.ini
 php_confenable: /etc/php/7.4/apache2/conf.d
-php_bin: /usr/local/bin/php7.4
+php_bin: /usr/bin/php7.4
 nginx_sock: /run/php/php7.4-fpm.sock
 fpm_user: www-data
 
