--- a/tasks/misp-add-users.yml
+++ b/tasks/misp-add-users.yml
@@ -1,13 +1,16 @@
 ---
 
+- name: Import misp-key-file
+  ansible.builtin.import_tasks: misp-key-file.yml
+
 ## FIXME! how to do it once only!
 ## Note: more a reset as next login, will ask to change password...
 - name: Check if admin pass already set
   ansible.builtin.stat: path="{{ misp_rootdir }}/.admin_pass_set"
   register: ap
 - name: Set admin password
-  ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake Password \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
-  # ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake user change_pw \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
+  # ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake Password \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
+  ansible.builtin.command: "{{ misp_rootdir }}/app/Console/cake user change_pw \"{{ misp_web_user }}\" \"{{ misp_web_pass }}\""
   become: yes
   become_user: "{{ www_user }}"
   when: not ap.stat.exists
@@ -25,9 +28,6 @@
 #       command: "{{ misp_rootdir }}/app/Console/cake Password {{ item.u }} \"{{ item.p }}\""
 #       with_items: "{{ misp_webusers_list }}"
 #   when: misp_webusers_list is defined and misp_webusers_list
-
-- name: Import misp-key-file
-  ansible.builtin.import_tasks: misp-key-file.yml
 
 - name: Set local variables in PyMISP/examples/keys.py
   ansible.builtin.lineinfile:
