jammy: add php extensions for composer

--- a/vars/Ubuntu-22.04.yml
+++ b/vars/Ubuntu-22.04.yml
@@ -6,6 +6,7 @@ misp_pkg_list:
  # MISP only supports PHP 7 on oct 2022
  - php7.4
  - php7.4-dev
+ - php7.4-dom
  - php7.4-curl
  - php7.4-mysql
  - php7.4-mbstring
@@ -18,6 +19,8 @@ misp_pkg_list:
  - php7.4-intl
  - php7.4-bcmath
  - php7.4-gd
+ - php7.4-simplexml
+ - php7.4-xml
  - postfix
  - gcc
  - zip
